make layout page

--- a/GrinMarket/res/layout/activity_main2.xml
+++ b/GrinMarket/res/layout/activity_main2.xml
@@ -11,15 +11,41 @@
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
-  limitations under the License. -->
+  limitations under the License.
+-->
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.grin.market.MainActivity" >
+
+    <!--
+       <LinearLayout
+        android:id="@+id/sample_main_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+    -->
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
+    <FrameLayout
+        android:id="@+id/sample_content_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="2" />
+
+    <!-- </LinearLayout> -->
 
     <fragment
         android:id="@+id/navigation_drawer"
@@ -28,40 +54,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         tools:layout="@layout/fragment_navigation_drawer" />
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/sample_main_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray" />
-
-        <FrameLayout
-            android:id="@+id/sample_content_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="2" />
-
-        <!--
-     	<com.grin.market.floatingButton.FloatingActionButton
-	    android:id="@+id/mFloatingActionButton"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="bottom|right"
-	    android:layout_margin="16dp"
-	    android:src="@android:drawable/ic_menu_add"
-	    fab:fab_colorNormal="#009688"
-	    fab:fab_colorPressed="#26a69a" />  -->
-    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
