--- a/GrinMarket/res/layout/pager_item.xml
+++ b/GrinMarket/res/layout/pager_item.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      android:gravity="center">
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <TextView
-          android:id="@+id/item_subtitle"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textAppearance="?android:attr/textAppearanceLarge"
-          android:text="Page:"/>
+        android:id="@+id/item_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Page:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-          android:id="@+id/item_title"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textSize="80sp" />
+        android:id="@+id/item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="80sp" />
+
+    <com.grin.market.floatingButton.FloatingActionButton
+        android:id="@+id/mFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/ic_menu_add"
+        fab:fab_colorNormal="#009688"
+        fab:fab_colorPressed="#26a69a" />
 
 </LinearLayout>
