--- a/GrinMarket/res/values/arrays.xml
+++ b/GrinMarket/res/values/arrays.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="title">
+    <string-array name="tab_title">
         <item>Deal</item>
         <item>Lounge</item>
         <item>Donation</item>
     </string-array>
 
+    <string-array name="navigation_title">
+        <item>Home</item>
+        <item>My Info</item>
+    </string-array>
+    
 </resources>
