--- a/GrinMarket/res/layout/fragment_sample.xml
+++ b/GrinMarket/res/layout/fragment_sample.xml
@@ -4,11 +4,13 @@
       android:layout_height="match_parent"
       android:orientation="vertical">
 
+    <!-- tab  -->
     <com.grin.market.view.SlidingTabLayout
           android:id="@+id/sliding_tabs"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
 
+    <!-- viewpager -->
     <android.support.v4.view.ViewPager
           android:id="@+id/viewpager"
           android:layout_width="match_parent"
